# client-desktop-shell-integration-nautilus

./: .gitmodules  CMakeLists.txt  README  README.md  agents.md
.github/: CODEOWNERS
.github/workflows/: main.yml  release.yml
src/: CMakeLists.txt  syncstate.py
